# prism_enum

./: .gitattributes  .gitignore  README.md  build.zig  build.zig.zon  meson.build  prism_enum.cpp
include/: prism_enum.h  prism_impl.h
src/: prism_enum.cpp  prism_impl.cpp
test/: test_edge_cases.cpp  test_main.cpp
